test/fail/static_args.rs
#[objective::objective]
trait Test {
    fn test(a: A, b: B, c: C) -> D {
    }
}

fn main() {}
